kuber_networking/manifests/k8s-04-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: app
  labels:
spec:
  podSelector: {}          
  policyTypes:
    - Ingress
    - Egress
